Fix styling of todolists and visibilityfilter buttons by convert to flex.

--- a/vanilla-react-todo/src/components/TodoList.css
+++ b/vanilla-react-todo/src/components/TodoList.css
@@ -1,11 +1,16 @@
 .TodoList-container {
   padding: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
 .TodoList {
   padding: 10px;
   margin: 10px;
   border: 1px solid rgba(100, 100, 100, 0.2);
+  width: 95%;
 }
 
 .TodoList-todos {
